[gd_scene load_steps=15 format=3 uid="uid://2jfjcm6ebujw"]

[ext_resource type="Script" uid="uid://10csggpybcp3" path="res://player/script/player.gd" id="1_mm0hj"]
[ext_resource type="AudioStream" uid="uid://1ie43x5nbp8b" path="res://assets/audio/fire.wav" id="2_boad6"]
[ext_resource type="AudioStream" uid="uid://h5qy1cw7r6b7" path="res://assets/audio/footstep.ogg" id="2_g6k8r"]
[ext_resource type="AudioStream" uid="uid://ducy0k0rlbyqy" path="res://assets/audio/doorbuzz.wav" id="3_boad6"]
[ext_resource type="Script" uid="uid://dultfih7fxw6c" path="res://player/script/player_hurtbox.gd" id="3_g1dw6"]
[ext_resource type="SpriteFrames" uid="uid://ci534wbtsvx88" path="res://player/sprites/Shadow.tres" id="5_g6k8r"]
[ext_resource type="AudioStream" uid="uid://ts85cky4wacg" path="res://assets/audio/death.wav" id="7_boad6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1dw6"]
size = Vector2(15, 15)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rkbax"]
height = 70.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g1dw6"]
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yw30f"]
height = 20.0

[sub_resource type="Animation" id="Animation_hg6s5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("die:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "die"
length = 3.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334, 0.8, 2.1, 3.3333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.3666666, 3.3),
"transitions": PackedFloat32Array(0.24148433, 4.756827, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -30), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("die:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t03j"]
_data = {
&"RESET": SubResource("Animation_hg6s5"),
&"die": SubResource("Animation_rgyib")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
scale = Vector2(2, 2)
collision_layer = 80
collision_mask = 37377
platform_floor_layers = 4294967294
platform_wall_layers = 1
script = ExtResource("1_mm0hj")
gunshot_sound_radius = 150.0
gunshot_sound_sfx = ExtResource("2_boad6")
footstep_sfx = ExtResource("2_g6k8r")
gun_cooldown_time = 1.0
invuln_time = 0.09
stand_blocked_sfx = ExtResource("3_boad6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g1dw6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
position = Vector2(0, -10)
sprite_frames = ExtResource("5_g6k8r")
animation = &"die"
offset = Vector2(0, -17)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("source_player") groups=["player_hurtbox"]]
visible = false
scale = Vector2(0.6, 0.6)
collision_layer = 64
collision_mask = 4352
script = ExtResource("3_g1dw6")
source_player = NodePath("..")

[node name="CS_NORMAL" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -31)
shape = SubResource("CapsuleShape2D_rkbax")
debug_color = Color(0.9979996, 0, 0.1636788, 0.41960785)

[node name="CS_SNEAK" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -31)
shape = SubResource("CapsuleShape2D_g1dw6")
debug_color = Color(0.6640297, 0.51294875, 1.92523e-07, 0.41960785)

[node name="CS_CRAWL" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -31)
shape = SubResource("CapsuleShape2D_yw30f")
debug_color = Color(0.105882354, 0.7019608, 0.28235295, 0.41960785)

[node name="Muzzle" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -23)
gizmo_extents = 2.1

[node name="Muzzle_up" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -23)
gizmo_extents = 2.1

[node name="Muzzle_side" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -15.5)
gizmo_extents = 2.1

[node name="Muzzle_down" type="Marker2D" parent="."]
visible = false
position = Vector2(-0.5, -16.04)
gizmo_extents = 2.1

[node name="Muzzle_crawl_up" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -20.36)
gizmo_extents = 2.1

[node name="Muzzle_crawl_side" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -4)
gizmo_extents = 2.1

[node name="Muzzle_crawl_down" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -4.025)
gizmo_extents = 2.1

[node name="Muzzle_sneak_down" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -9.7)
gizmo_extents = 2.1

[node name="Muzzle_sneak_side" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -11)
gizmo_extents = 2.1

[node name="Muzzle_sneak_up" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -19.325)
gizmo_extents = 2.1

[node name="PunchPoint_left" type="Marker2D" parent="."]
visible = false
position = Vector2(-10, -24.5)
gizmo_extents = 2.1

[node name="PunchPoint_right" type="Marker2D" parent="."]
visible = false
position = Vector2(10.5, -24.5)
gizmo_extents = 2.1

[node name="PunchPoint_down" type="Marker2D" parent="."]
visible = false
position = Vector2(0, -1.5)
gizmo_extents = 2.1

[node name="PunchPoint_up" type="Marker2D" parent="."]
visible = false
position = Vector2(5, -37)
gizmo_extents = 2.1

[node name="RC_WALL_UP" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -6)
target_position = Vector2(0, -8)
collision_mask = 129

[node name="RC_WALL_DOWN" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 8)
collision_mask = 129

[node name="RC_WALL_LEFT" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(-12, 0)
collision_mask = 129

[node name="RC_WALL_RIGHT" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(12, 0)
collision_mask = 129

[node name="RC_VENT_UP" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(0, -12)
collision_mask = 8193

[node name="RC_VENT_DOWN" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(0, 12)
collision_mask = 8193

[node name="RC_VENT_LEFT" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(-12, 0)
collision_mask = 8193

[node name="RC_VENT_RIGHT" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(12, 0)
collision_mask = 8193

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8t03j")
}

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_boad6")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
